# realnex-sdk

./: .manifest.json  PyPI_README.md  README.md  bash.sh  install.cmd  install.sh  pyproject.toml  readme.md  requirements.txt  setup.py  test_sdk.py
documentation/models/: Address.md  Attachment.md  AttachmentPageResponse.md  AttachmentSorting.md  Base64File.md  ClientCallbacks.md  ClientInfo.md  ClientRetrySettings.md  CompContact.md  CompProperty.md  CompSpace.md  Company.md  CompanyDetails.md  CompanyLink.md  CompanyListItem.md  Contact.md  ContactAddress.md  ContactAddressRole.md  ContactAgent.md  ContactInvestor.md  ContactLink.md  ContactListItem.md  ContactPersonal.md  ContactTenant.md  ContactTenantSpace.md  ContactVendor.md  CreateCompany.md  CreateContact.md  CreateLeaseComp.md  CreateProject.md  CreateProperty.md  CreateSaleComp.md  CreateSpace.md  EditAddress.md  EditAddressPrincipal.md  EditAddressRole.md  EditAttachment.md  EditCompContact.md  EditCompProperty.md  EditCompSpace.md  (+84 more)
documentation/services/: ClientService.md  CrmAttachmentService.md  CrmCompanyService.md  CrmContactService.md  CrmEventService.md  CrmHistoryService.md  CrmLeaseCompService.md  CrmODataService.md  CrmObjectGroupService.md  CrmProjectService.md  CrmPropertyService.md  CrmSaleCompService.md  CrmService.md  CrmSpaceService.md
examples/: install.cmd  install.sh  sample.py
src/real_nex_sync_api_data_facade/: __init__.py  sdk.py  setup.py
src/real_nex_sync_api_data_facade/models/: __init__.py  address.py  attachment.py  attachment_page_response.py  attachment_sorting.py  (+120 more)
(+16 files in other folders)
