[project]
name = "real_nex_sync_api_data_facade"
version = "1.0.0"
description = "RealNex Sync API Data Facade SDK"
readme = "README.md"  # Ensure this is the correct path
long_description = "file: README.md"
long_description_content_type = "text/markdown"
requires-python = ">=3.7"
dependencies = [
    "requests>=2.31.0"
]
