[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "real_nex_sync_api_data_facade"
version = "1.0.0"
description = "RealNex Sync API Data Facade SDK"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["requests"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["real_nex_sync_api_data_facade"]
